plugins {
    id 'java'
    id 'application'

    id "com.github.ben-manes.versions" version "0.47.0"
    id 'com.github.johnrengelman.shadow' version '8.1.1'
}

group 'hu.garaba'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

application {
    mainClassName = 'hu.garaba.Main'
    applicationDefaultJvmArgs = ['--enable-preview']
}

dependencies {
    implementation 'org.apache.logging.log4j:log4j-slf4j2-impl:3.0.0-alpha1'
    implementation("org.apache.logging.log4j:log4j-core:3.0.0-alpha1")
    implementation("org.apache.logging.log4j:log4j-jpl:3.0.0-alpha1")

    implementation 'org.xerial:sqlite-jdbc:3.42.0.0'

    implementation 'org.telegram:telegrambots:6.7.0'
    implementation 'com.azure:azure-ai-openai:1.0.0-beta.2'

    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

tasks.withType(JavaCompile).each {
    it.options.compilerArgs.add('--enable-preview')
}

test {
    useJUnitPlatform()
}